--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>starter pack</title>
+    <title>React Notes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8575431710.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="logo"></div>
     <div id="main">Loading</div>
   </body>
 </html>
